# inkscape-extension-printer-labels

./: .gitignore  LICENSE  README.md  formats.csv  generate.py  pyproject.toml  ruff.toml  template_printer_labels.inx  template_printer_labels.py  todo.md
.github/workflows/: test.yml
tests/: README.md  test_label.py  test_labelsheet.py
