[project]
name = "inscape-extension-printer-labels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "inkex>=1.4.1",
    "PyGObject<3.52.0",  # Build system (ubunut-22.04) has hard dependecy on girepository-2.0!
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
